<resources>
    <string name="app_name" translatable="false">Randomix</string>
    <string name="app_extended_name" translatable="false">Randomix - Decision Maker</string>
    <string name="app_intro_description">An open source app to choose randomly between numbers, answers, options and so on. Let the randomness talk!</string>
    <string name="result_placeholder" translatable="false"> - - - </string>
    <string name="title_roulette">Roulette</string>
    <string name="title_coin">Coin</string>
    <string name="title_dice">Dice</string>
    <string name="title_magic_ball">Magic Ball</string>
    <string name="title_settings">Settings</string>
    <string name="generic_result">The result is:</string>
    <string name="back">Back</string>
    <string name="hello_roulette_fragment">Roulette mode</string>
    <string name="description_roulette">Do you have to choose something? Are you tired of polls and bossy friends? A roulette will decide for you! Long press the roulette to Add generic options or clear them.</string>
    <string name="spin_roulette">Spin the roulette!</string>
    <string name="insert_roulette_hint">Enter an option…</string>
    <string name="delete_roulette_hint">Delete the last option entered</string>
    <string name="insert_roulette_description">Please list below the possible choices to add in the roulette.</string>
    <string name="no_entry_roulette">Please, enter 2 or more options to spin the roulette!</string>
    <string name="too_much_entries_roulette">You can\'t enter more than 30 options!</string>
    <string name="generic_option">Option</string>
    <string name="recent_title">Recent options</string>
    <string name="recent_description">Tap a chip to add a predefined set. Long press on a recent option set to pin it, tap to restore it or swipe to delete it.</string>
    <string name="bottom_sheet_no_option">No recent option, spin the roulette to save the current options!</string>
    <string name="letters_shortcut">A-Z Letters</string>
    <string name="numbers_1_100_shortcut" translatable="false">1–100</string>
    <string name="range">Range</string>
    <string name="roulette_mode_options">Options</string>
    <string name="wrong_range_roulette">The range is wrong or empty, please enter both the values correctly!</string>
    <string name="max" translatable="false">Max</string>
    <string name="min" translatable="false">Min</string>
    <string name="delete_all_roulette">Delete all the options</string>
    <string name="delete_all_roulette_confirmation">Are you sure you want to delete all the entered options?</string>
    <string name="hello_coin_fragment">Coin mode</string>
    <string name="description_coin">Flipping a coin is easy, but can help you decide between doing something or not. Just heads or tails. Let the coin talk!</string>
    <string name="flip_coin">Flip the coin!</string>
    <string name="hint_coin">Press the button below!</string>
    <string name="result_head">Heads!</string>
    <string name="result_tail">Tails!</string>
    <string name="hello_magic_ball_fragment">Magic Ball</string>
    <string name="description_magic_ball">The magic ball will tell you the answers! Just ask something, and it will help you with a generic and affordable answer. You can activate its rudeness from settings!</string>
    <string name="shake_ball">Shake it!</string>
    <string name="hint_magic_ball">Press the button below!</string>
    <string name="magic_answer_1">No.</string>
    <string name="magic_answer_2">Yes!</string>
    <string name="magic_answer_3">I don\'t think so.</string>
    <string name="magic_answer_4">Maybe!</string>
    <string name="magic_answer_5">This makes no sense.</string>
    <string name="magic_answer_6">Probably…</string>
    <string name="magic_answer_7">Are you sure?</string>
    <string name="magic_answer_8">Probably yes.</string>
    <string name="magic_answer_9">Probably no.</string>
    <string name="magic_answer_10">Of course.</string>
    <string name="magic_answer_11">Ask it yourself.</string>
    <string name="magic_answer_12">No, absurd.</string>
    <string name="magic_answer_13">Hell yeah!</string>
    <string name="magic_answer_14">Think about it.</string>
    <string name="magic_answer_15">Who knows.</string>
    <string name="magic_answer_16">Are you kidding?</string>
    <string name="magic_answer_17">As I see it, yes.</string>
    <string name="magic_answer_18">It is certain.</string>
    <string name="magic_answer_19">It is decidedly so.</string>
    <string name="magic_answer_20">Outlook good.</string>
    <string name="magic_answer_21">Signs point to yes.</string>
    <string name="magic_answer_22">Without a doubt.</string>
    <string name="magic_answer_23">Reply hazy, try again.</string>
    <string name="magic_answer_24">Better not tell you now.</string>
    <string name="magic_answer_25">Cannot predict now!</string>
    <string name="magic_answer_26">Concentrate and ask again.</string>
    <string name="magic_answer_27">Don\'t count on it.</string>
    <string name="magic_answer_28">My sources say no.</string>
    <string name="magic_answer_29">Very doubtful.</string>
    <string name="magic_answer_30">Ask your best friend.</string>
    <string name="magic_answer_rude_1">No, idiot.</string>
    <string name="magic_answer_rude_2">Of course, dammit.</string>
    <string name="magic_answer_rude_3">Are you stupid?</string>
    <string name="magic_answer_rude_4">Lol! How stupid.</string>
    <string name="magic_answer_rude_5">You\'re crazy.</string>
    <string name="magic_answer_rude_6">Go to hell.</string>
    <string name="no_answers_magic_ball">No custom answers. Add one from the above text field. You can delete them by tapping on them.</string>
    <string name="custom_answers">Custom answers</string>
    <string name="use_custom_answers">Use custom answers</string>
    <string name="insert_answer_hint">Insert an answer…</string>
    <string name="hello_dice_fragment">Dice mode</string>
    <string name="description_dice">Dice can be useful, in a table game for example! The app will throw one to ten dice for you. Select the number and type below. Good luck!</string>
    <string name="throw_dice">Throw the dice!</string>
    <string name="hint_dice">Press the button below!</string>
    <string name="hello_settings_fragment">Settings</string>
    <string name="dev_name" translatable="false">m.i.n.a.r.</string>
    <string name="dev_description">I\'m a polite guy, and I like beautiful things like animations, icons, sports cars and 3D printing. I work as a designer and computer engineer.</string>
    <string name="dev_email" translatable="false">minar.tastic@gmail.com</string>
    <string name="dev_personal_site" translatable="false">https://minar-portfolio.web.app</string>
    <string name="dev_instagram" translatable="false">https://www.instagram.com/minar.tastic/</string>
    <string name="dev_twitter" translatable="false">https://twitter.com/MinarTastic</string>
    <string name="dev_xda" translatable="false">https://forum.xda-developers.com/member.php?u=5222216</string>
    <string name="dev_github" translatable="false">https://github.com/m-i-n-a-r</string>
    <string name="dev_other_apps" translatable="false">https://play.google.com/store/apps/dev?id=7720251761301594831</string>
    <string name="dev_telegram" translatable="false">https://t.me/minartastic</string>
    <string name="dev_crowdin" translatable="false">https://crowdin.com/project/randomix</string>
    <string name="about_title">About</string>
    <string name="about_version">Version</string>
    <string name="about_language_title">Language</string>
    <string name="about_language_summary">Pick the language used by Randomix</string>
    <string name="about_rate_title">Rate the app</string>
    <string name="about_rate_summary">Leave a review on the Play Store</string>
    <string name="about_share_title">Share Randomix</string>
    <string name="about_share_summary">Tell a friend about the app</string>
    <string name="about_share_text">Randomix, let the randomness talk: %1$s</string>
    <string name="about_store_url" translatable="false">https://play.google.com/store/apps/details?id=com.minar.randomix</string>
    <string name="about_translate_summary">Help bring Randomix to your language on Crowdin</string>
    <string name="about_contact_title">Contact the developer</string>
    <string name="about_no_app_found">No app can handle this, sorry!</string>
    <string name="easter_egg">Nice logo, huh? ;D</string>
    <string name="customization">Customization</string>
    <string name="vibration_name">Vibration</string>
    <string name="vibration_description_on">Vibrate when a button is pressed</string>
    <string name="vibration_description_off">No vibrations when a button is pressed</string>
    <string name="sound_name">Sounds</string>
    <string name="sound_description_on">Play a sound when a button is pressed</string>
    <string name="sound_description_off">No sound when a button is pressed</string>
    <string name="dice_number_name">Dice number</string>
    <string name="dice_number_description">Change the number of dice thrown. Currently %s</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>
    <string name="three_v_three" translatable="false">3 vs 3</string>
    <string name="accent_description">Change the default accent color. Currently %s</string>
    <string name="accent_name">Accent color</string>
    <string name="theme_description">Use a dark, light or automatic app theme. Currently %s</string>
    <string name="theme_name">App theme</string>
    <string name="blue">Blue</string>
    <string name="aqua">Aqua</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="teal">Teal</string>
    <string name="violet">Violet</string>
    <string name="pink">Pink</string>
    <string name="light_blue">Light blue</string>
    <string name="red">Red</string>
    <string name="lime">Lime</string>
    <string name="crimson">Crimson</string>
    <string name="monet" translatable="false">Monet</string>
    <string name="system_theme">System default</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="app_behavior">App behavior</string>
    <string name="rude_answers_name">Rude answers</string>
    <string name="rude_answers_description_on">Rude answers activated, idiot</string>
    <string name="rude_answers_description_off">Just kind and polite answers</string>
    <string name="dice_d4"  translatable="false">D4</string>
    <string name="dice_d6"  translatable="false">D6</string>
    <string name="dice_d8"  translatable="false">D8</string>
    <string name="dice_d10" translatable="false">D10</string>
    <string name="dice_d12" translatable="false">D12</string>
    <string name="dice_d20" translatable="false">D20</string>
    <string name="one_numeral" translatable="false">1</string>
    <string name="two_numeral" translatable="false">2</string>
    <string name="three_numeral" translatable="false">3</string>
    <string name="four_numeral" translatable="false">4</string>
    <string name="five_numeral" translatable="false">5</string>
    <string name="six_numeral" translatable="false">6</string>
    <string name="seven_numeral" translatable="false">7</string>
    <string name="eight_numeral" translatable="false">8</string>
    <string name="nine_numeral" translatable="false">9</string>
    <string name="ten_numeral" translatable="false">10</string>
</resources>