<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.minar.randomix.utilities.CustomAuthorPreference
        android:layout="@layout/fragment_settings"
        android:selectable="false" />

    <PreferenceCategory
        android:key="app_behavior"
        android:title="@string/app_behavior"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="rude_answers"
            android:summaryOff="@string/rude_answers_description_off"
            android:summaryOn="@string/rude_answers_description_on"
            android:title="@string/rude_answers_name"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/diceNumber"
            android:entryValues="@array/diceNumberValues"
            android:key="dice_number"
            android:summary="@string/dice_number_description"
            android:title="@string/dice_number_name"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="customization"
        android:title="@string/customization"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="system"
            android:entries="@array/themes"
            android:entryValues="@array/themeValues"
            android:key="theme_color"
            android:summary="@string/theme_description"
            android:title="@string/theme_name"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="blue"
            android:entries="@array/accents"
            android:entryValues="@array/accentValues"
            android:key="accent_color"
            android:summary="@string/accent_description"
            android:title="@string/accent_name"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="vibration"
            android:summaryOff="@string/vibration_description_off"
            android:summaryOn="@string/vibration_description_on"
            android:title="@string/vibration_name"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="sound"
            android:summaryOff="@string/sound_description_off"
            android:summaryOn="@string/sound_description_on"
            android:title="@string/sound_name"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>